Apply review suggestions