@@ -13,7 +13,6 @@ package org.kitodo.dataeditor.handlers;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import java.util.ArrayList;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -48,12 +47,12 @@ public class MetsKitodoHeaderHandlerTest {
         MetsType.MetsHdr.Agent agent = new MetsType.MetsHdr.Agent();
         agent.setName("Kitodo");
         MetsType.MetsHdr metsHeader = new MetsType.MetsHdr();
-        metsHeader.getAgent().add(0, agent);
+        metsHeader.getAgent().addFirst(agent);
         Mets mets = new Mets();
         mets.setMetsHdr(metsHeader);
         Mets actual = MetsKitodoHeaderHandler.addNoteToMetsHeader(noteMessage, mets);
 
-        List<MetsType.MetsHdr.Agent.Note> resultNotes = actual.getMetsHdr().getAgent().get(0).getNote();
+        List<MetsType.MetsHdr.Agent.Note> resultNotes = actual.getMetsHdr().getAgent().getFirst().getNote();
         assertEquals(1, resultNotes.size(), "Expecting one note in mets header agent section.");
         assertEquals(noteMessage, resultNotes.getFirst().getValue(), "Note in mets header agent section differ.");
     }
